Changes from Version 0.2 to 0.3 [March 2016]
* added analyze_pooled function
* added bioradCNV data set
* various bug fixes

Changes from Version 0.1.4.0 to 0.2 [December 2015]
* Several bug fixes
* Improved documentation
* New GUI dpcReport
* Added new data import functions

Changes from Version 0.1.3.3 to 0.1.4.0 [April 2015]
* Improved bioamp function
* Improved test_counts by adding simpler and faster variant of the test
* Assorted grammar and spelling checks
* New references added
* Improved documentation for pds_raw data set

Changes from Version 0.1.2 to 0.1.3.3 [February 2015]
* Technical update - resolved conflicts after the update of chipPCR

Changes from Version 0.1.2 to 0.1.3.2 [December 2014]
* New features
  - test_counts, function for comparing multiple digital PCR experiments using GLM - accompanied by plot, summary, coef methods and GUI.
* Changes
  - update of test_panel and vignette.
* Assorted improvements of the manual and documentation.

Changes from Version 0.1.1 to 0.1.2 [June 2014]
* New features
  - qcr2pp, a function to convert conventional qPCR experiments into 
    data for dPCR experiments
  - Spatial resolution and tests of plates 

General changes
* split of fun.R into single *.R files

Functions
* added create_adpcr() 
* added qpcr2pp()
* added test_panel() - testing randomness of distribution template on adPCR plate
* added test_peaks() - quick way to classify signal from ddPCR
* added test_ratio() - test significance of differences between two dPCR experiments

Objects
* added qpcrpp object

Data
* added many_peaks data set
* ddPCR data set by Michael Jahn (UFZ Leipzig)

Documentation
* Numerous updates and refinements

Imports/Depends
* Uses AmpSim from chipPCR
* rateratio.test
* spatstat
* signal