@@ -38,7 +38,6 @@ export(test_counts_gui)
 export(test_panel)
 export(test_peaks)
 export(test_pooled)
-export(test_ratio)
 exportClasses(count_test)
 exportMethods(coef)
 exportMethods(plot)
