@@ -1,3 +1,7 @@
+Changes from Version 0.2 to 0.3 [December 2016]
+* improved GUI dpcReport
+* removed now redundant test_ratio
+
 Changes from Version 0.2 to 0.3 [March 2016]
 * added analyze_pooled function
 * added bioradCNV data set
